Made base64 encoding improvements compatible with Java 7